--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL=https://internship-monitoring-system-production.up.railway.app
+REACT_APP_API_BASE_URL=https://internship-monitoring-system-production.up.railway.app/api
